--- a/frontend/src/Components/Team/Team.css
+++ b/frontend/src/Components/Team/Team.css
@@ -77,7 +77,7 @@
     background-color: #fff;
     text-align: center;
     overflow: hidden;
-    width:18vw;
+    /* width:18vw; */
     position: relative;
   }
   
