--- a/frontend/src/Components/Discovery/Discovery.css
+++ b/frontend/src/Components/Discovery/Discovery.css
@@ -63,3 +63,12 @@
   }
   
  
+
+  @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;700&display=swap');
+
+.answer{
+  font-family: 'Chakra Petch', sans-serif;
+}
+
+
+
