--- a/frontend/src/Components/Discovery/Discovery.css
+++ b/frontend/src/Components/Discovery/Discovery.css
@@ -63,12 +63,17 @@
   }
   
  
+  @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap");
 
-  @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;700&display=swap');
+  /* @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;700&display=swap'); */
 
 .answer{
-  font-family: 'Chakra Petch', sans-serif;
+  font-family: 'Amatic SC', sans-serif;
+    width: 100%;
+    font-weight: 900;
+    
 }
+
 
 
 
